--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,8 +51,8 @@ jobs:
     - name: Upload Linux Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: UrQuanMasters-Linux
-        path: ./UrQuanMasters
+        name: UrQuanMastersDebug-Linux
+        path: ./UrQuanMastersDebug
         if-no-files-found: error
 
   build-windows-32bit:
@@ -104,6 +104,6 @@ jobs:
     - name: Upload Windows 32-bit Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: UrQuanMasters-Windows
-        path: ./UrQuanMasters.exe
+        name: UrQuanMastersDebug-Windows
+        path: ./UrQuanMastersDebug.exe
         if-no-files-found: error
